--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -336,7 +336,7 @@
 
   /* Search messages. TODO: Apply this to all search elements. */
   ._2yeJ5 ._1iMEz/*, ._2yeJ5 ._1iMEz._3sdhb*/ {
-    background-color: var(--darkerz) !important; }
+    background-color: var(--darker) !important; }
   	/* Input wrapper. */
   	._1iMEz label {
       border: 0px solid var(--dark) !important;
