--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -15,7 +15,7 @@
 @var color lighter "Lighter" #e9e9e9
 @var color accent "Accent" #7289da
 @var color icon "Icons" #e1e1e1
-@var color shadow "Shadow" rgba(0,0,0,0.2)
+@var color shadow "Shadow" rgba(0,0,0,0.12)
 @var color mred "Red-ish" #A3525B
 @var color mgreen "Green-ish" #70A352
 @var color mblue "Blue-ish" #527AA3
@@ -81,6 +81,13 @@
     top: 0px;
     width: 100%; } EOT;
 }
+@advanced dropdown tails "Message tails" {
+  on "On" <<<EOT
+  EOT;
+  off "Off" <<<EOT
+  .tail {
+    display: none !important; } EOT;
+}
 ==/UserStyle== */
 
 
@@ -113,6 +120,12 @@
       border-radius: 3px;
       background-color: var(--shadow); }
 
+  /* Progress. */
+  progress[value]::-webkit-progress-bar {
+    background: var(--darker); }
+    /* Value. */
+    progress[value]::-webkit-progress-value {
+      background: var(--accent); }
 
   /* App wrapper. */
   #app .app {
@@ -143,7 +156,8 @@
     /*box-shadow: 1px -3px 2px 0 shadow inset/**/
     border: none;
     background-color: var(--dark) }
-    .app ._3q4NP ._3qlW9::before {
+    /* Status update. */
+    /* .app ._3q4NP ._3qlW9::before {
       content: 'Rewrite is done! A few old and a few new features coming up. Let me know if something is still broken. ^-^';
       left: 0;
       top: 0;
@@ -153,11 +167,11 @@
       z-index: 98;
       width: 90%;
       margin: 0 5%;
-      padding-top: 40vh;/**/
+      padding-top: 40vh;
       text-align: center;
       font-size: 20px;
       color: var(--light);
-      background: var(--dark); }
+      background: var(--dark); } /**/
     /* Image. */
     .app ._1Iexl ._3qlW9 ._3BqNZ ._2Uo0Z {
       width: 250px;
@@ -176,6 +190,7 @@
 	/* Left drawer. */
   #app .app #side {
     /* TODO borders. */
+    border-right: 2px solid var(--darker);
     background-color: var(--darker); }
 
     /* Chat list. */
@@ -261,6 +276,12 @@
       /* Text color. */
       ._2fq0t * {
         color: var(--light); }
+
+    /* Option/select elements. */
+    .uyEaY select {
+      border-color: var(--accent); }
+      .uyEaY select option {
+        background-color: var(--dark); }
 
     /* Archived chat image. */
   	._2fq0t ._2Lev2 {
@@ -525,7 +546,7 @@
 
     /* System messages. */
     .message-system {
-      box-shadow: 0 0 8px 1px var(--shadow);
+      box-shadow: 0 1px 8px 0px var(--shadow);
       border-bottom: 3px solid var(--shadow);
       background-color: var(--dark) !important; }
   		/* Text color and shadows. */
@@ -626,19 +647,20 @@
 	.tail .tail-container {
     width: 0px !important;
     height: 12px !important;
-    z-index: -1;
+    z-index: 0 !important;
     border-top: 12px solid var(--darker);
-    -moz-filter: drop-shadow(0 1px 2px rgba(0,0,0,.2));
-    filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.2));
     background: none !important; }
     .tail.message-in .tail-container {
-      left: -10px; top: 0px;
+      left: -12px; top: 0px;
       border-left: 12px solid transparent;
-      border-radius: 4px 0 0 0; }
+      border-radius: 6px 0 0 0; }
     .tail.message-out .tail-container {
-      right: -10px; top: 0px;
+      right: -12px; top: 0px;
       border-right: 12px solid transparent;
-      border-radius: 0 4px 0 0; }
+      border-radius: 0 6px 0 0; }
+
+    /* Disable tails everywhere. */
+    /*[[tails]]*/
 
     /* Disable tails everywhere except in chat. */
   	.starred-msg-wrapper .tail-container,
@@ -794,7 +816,7 @@
     /* Remove ONLY borders. */
     ._1CkkN ._10xEB, ._14oqx .DcItJ,
     html[dir] ._2EXPL:after, ._3j7s9,
- 		._1fkhx, .chat-body {
+ 		._1fkhx, .chat-body, ._3hhmj {
       border: none !important; }
 
 
